infra/k8s/client-depl.yaml
#Creating the service to communicate with the pods
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector: #choose the pods which this service would target to communicate
    app: client
  ports:
    - name: client # the name of the container used for loggin purpose
      protocol: TCP
      port: 3000 #Port open inside the pods
      targetPort: 3000 #POrt on which application run inside the contianer
