infra/k8s/expiration-redis-depl.yaml
# This is separate pod for the mongodb to be hosted for the auth service 
# Microservices rule per service there should be database

apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1 # this is how many pods we want to create 
  selector:
    matchLabels: # match label is used for deployment to poin the mongodb POD
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  ports:
    - name: auth-db
      protocol: TCP
      port: 6379
      targetPort: 6379
