infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats-streaming:0.17.0
        args: [ #this arguments  can be passed to the service when get started and it will run when the time service is running 
          '-p', # get a refecence from the https://nats.docs.io -p is port where nats server run
          '4222', # this is port of -p
          '-m',  #this is the monitoring port where we can see the information about server like clients and subscription visit http://localhost:8222/streaming
          '8222',
          '-hbi', #this is heartbeat means the server checks for every of its client in described time 5s
          '5s',
          '-hbt', #this heartbeat is time for clients to respond to the server of nats
          '5s',
          '-hbf', # this is the number of times a client can fail, that server assumes it is dead
          '2',
          '-SD',
          '-cid',
          'ticketing'
        ]
---

apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector: 
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
