infra/k8s/tickets-mongo-depl.yaml
# This is separate pod for the mongodb to be hosted for the tickets service 
# Microservices rule per service there should be database

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  replicas: 1 # this is how many pods we want to create 
  selector:
    matchLabels: # match label is used for deployment to poin the mongodb POD
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
    - name: tickets-db
      protocol: TCP
      port: 27017
      targetPort: 27017
